# rust

./: Cargo.toml  Shuttle.toml  rustfmt.toml
src/: main.rs
src/models/: ascii_art.rs  cpu_model.rs  mod.rs
src/routes/: ascii.rs  cpu_routes.rs  mod.rs  page_routes.rs  router.rs  static_files.rs
src/services/: ascii_service.rs  cpu_services.rs  mod.rs
src/templates/: template_service.rs
templates/: ascii.html  base.html  cpu.html  navbar.html
